# code-jail

./: .gitignore  AGENTS.md  README.md  pyproject.toml  spec.md
.devcontainer/: Dockerfile  jail.config.json
src/jail/: __init__.py  cli.py  scaffold.py
src/jail/runtime/: devcontainer.py
src/jail/templates/.devcontainer/: devcontainer.json  postCreateCommand.sh
tests/: test_codex_help.py  test_help.py  test_init_overwrite_behavior.py  test_scaffold.py  test_shell_no_devcontainer.py
