[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "code-jail"
version = "0.0.1"
description = "Spin up a devcontainer \"jail\" for coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Maintainers" }]
dependencies = [
  "typer>=0.12,<1",
  "rich>=13,<14",
  "jsonschema>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "ruff>=0.6",
  "black>=24",
  "isort>=5",
  "mypy>=1.11",
]

[project.scripts]
jail = "jail.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jail"]
include = [
  "src/jail/templates/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
